--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -16,7 +16,17 @@
     
     <h:body>
         <header>
-            <h1>Hello, world!</h1>
+            <div id="page">
+                <div id="header">
+                    <img src="img/logo.PNG"/>
+                </div>
+                <p></p>
+                <div id="content"> 
+                    <h1>Bienvenido</h1>
+                    <a href="#">Crear Cuenta</a>
+                    <a href="#">Ingresar</a>
+                </div>
+            </div>
         </header>
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
