vista de selección con imagenes y configuración de componentes, metodo de pago y resumen por terminar

--- a/web/payment.xhtml
+++ b/web/payment.xhtml
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <p></p>
-                <h:commandButton class="" type="submit" value="Login" action="resume" />
+                <h:commandButton class="" type="submit" value="Pagar" action="resume" />
             </h:form>
         </div>
     </body>  
