--- a/web/respuesta.xhtml
+++ b/web/respuesta.xhtml
@@ -7,8 +7,8 @@
     </h:head>
     <h:body>
         <h:form>
-            <h2>Usuario introducido: #{log.user}</h2>
-            <h3>Contraseña introducida: #{log.pwd}</h3>
+            <h2>cpu: #{log.cpu}</h2>
+            <h3>modelo cpu: #{log.cpumodel}</h3>
             <p></p>
             <h:commandButton id="back" value="Back" action="bienvenida" />
         </h:form>
