--- a/web/respuesta.xhtml
+++ b/web/respuesta.xhtml
@@ -8,7 +8,7 @@
     <h:body>
         <h:form>
             <h2>cpu: #{log.cpu}</h2>
-            <h3>modelo cpu: #{log.cpumodel}</h3>
+            <h2>cpu: #{log.cpumodel}</h2>
             <p></p>
             <h:commandButton id="back" value="Back" action="bienvenida" />
         </h:form>
